# Sole

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/: Sole.h
include/Core/: Event.h  Game.h  Publisher.h  State.h  Subscriber.h
include/Entity/: Character.h  Entity.h  Player.h
include/Events/: SFML_Event_Wrapper.h
include/Utilities/: SFML_Packet.h
source/: CMakeLists.txt  Sole.cpp  main.cpp
source/Core/: CMakeLists.txt  Game.cpp  Publisher.cpp  State.cpp  Subscriber.cpp
source/Entity/: CMakeLists.txt  Character.cpp  Entity.cpp  Player.cpp
source/Events/: CMakeLists.txt  SFML_Event_Wrapper.cpp
test/: CMakeLists.txt
test/source/: Sole_test.cpp
